[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "more-remesas-sdk"
version = "0.1.0"
description = "Python SDK for More Payment Evolution Remittance API v2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stanley Castin (n1n24)", email = "stanleycastin19@gmail.com" }]
keywords = ["remittance", "soap", "mmt", "more", "payments"]
dependencies = ["requests>=2.31,<3"]

[project.urls]
Homepage = "https://github.com/ninjaroot-509/more-remesas-sdk"
Issues = "https://github.com/ninjaroot-509/more-remesas-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
